[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Maksym Schipka <maksym@schipka.work>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
array2d = "0.2.1"
lazy_static = "1.4.0"
ndarray = "0.14.0"
pest = "2.1.3"
pest_derive = "2.1.0"
petgraph = "0.5.1"
regex = "1.4.2"
simple-error = "0.2.2"
